This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
* Updated VirtualDub to v1.10.4-test12
* Updated Unrar to v5.0.0.12


1.7.0 - 29 September 2013
=========================
+ Replace the internal filters with LAV Filters.
  LAV Filters are modern open source DirectShow filters based on FFmpeg. They are known
  to be reliable and fast and overall should be more stable than the old filters.
  MPC-HC integrates LAV Filters directly and no extra installation steps are required.
  The embedded version of LAV Filters doesn't interfere at all with other installed
  DirectShow filters (including the standalone versions of LAV Filters).
  Note to XP users: hardware decoding is only supported on nVidia graphic adapters. If you
  really need a DXVA decoder, you can use a standalone version of MPC Video Decoder.
+ Support loading HTTP/RTSP/UDP/RTP streams using embedded source filters
+ D3DFullscreen can now switch to windowed mode (just like regular fullscreen mode)
+ Audio Switcher: Show all audio tracks available, including all the embedded tracks
  exhibited by the source filter and the external tracks
+ Playlist: Add a "Move to Recycle Bin" right click option, with optional keyboard shortcut
+ Ticket #533, Add a command line switch (/device) to open the default video device
+ Ticket #3107, Add support for playing from standard input.
  Use "-" as a special filename to designate the standard input.
  Examples:
    > mpc-hc.exe - < sample.ts
    > a_prog.exe | mpc-hc.exe -
+ Improved RAR File Source integration:
  - Added support for subtitle database
  - Added support for file properties and MediaInfo
  - "File -> Save a copy" now extracts the file from the RAR archive
+ Windows 8.1 support