@@ -12,6 +12,7 @@ next version - not released yet
 ===============================
 * Updated VirtualDub to v1.10.4-test12
 * Updated Unrar to v5.0.0.12
+! Ticket #3530, Internal LAV Splitter: the advanced subtitle selection modes were ignored
 
 
 1.7.0 - 29 September 2013
